トップページ作成

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -5,11 +5,16 @@
 
 @import "layout/_header";
 @import "layout/_footer";
+@import "layout/_sidemenu";
 
 @import "object/component/_button";
+@import "object/component/_scroll-now";
+@import "object/component/_scrollbar";
 
 @import "object/project/_section";
 @import "object/project/_flex";
+@import "object/project/_flex-layout";
+@import "object/project/_main-visual";
 
 @import "object/utility/_mgb";
 @import "object/utility/_mgt";
