--- a/app/css/fundation/_mixin.scss
+++ b/app/css/fundation/_mixin.scss
@@ -8,3 +8,10 @@ $breakpoints: (
     @content;
   }
 }
+
+@mixin baseStyle($color: $black, $fontSize: '14px', $fontWeight: '500', $lineHeight: 1.5 ) {
+  font-size: $fontSize;
+  font-weight: $fontWeight;
+  color: $color;
+  line-height: $lineHeight;
+}
