--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -15,8 +15,10 @@
 @import "object/project/_flex";
 @import "object/project/_flex-layout";
 @import "object/project/_main-visual";
+@import "object/project/_info";
 
 @import "object/utility/_mgb";
 @import "object/utility/_mgt";
 @import "object/utility/_pdt";
 @import "object/utility/_pdb";
+@import "object/utility/_dotted-line";
