--- a/app/css/object/component/_scrollbar.scss
+++ b/app/css/object/component/_scrollbar.scss
@@ -12,6 +12,24 @@
         width: 10px;
         height: 70px;
         display: inline-block;
-        padding-left: 5px;
+        margin-left: 5px;
+    }
+}
+.textbar {
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+
+    &__text {
+        writing-mode: vertical-rl;
+        display: block;
+        margin-bottom: 10px;
+    }
+    &__bar {
+        width: 2px;
+        height: 70px;
+        background: $black;
+        display: inline-block;
+        margin-left: 5px;
     }
 }
