--- a/app/css/object/utility/_dotted-line.scss
+++ b/app/css/object/utility/_dotted-line.scss
@@ -9,3 +9,11 @@
     background-size: 4px 1px;
     background-repeat: repeat-x;
 }
+
+.separate {
+    width: 1px;
+    height: 60px;
+    display: inline-block;
+    margin: 0 30px;
+    background: white;
+}
