--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -6,6 +6,7 @@
 @import "layout/_header";
 @import "layout/_footer";
 @import "layout/_sidemenu";
+@import "layout/_container";
 
 @import "object/component/_button";
 @import "object/component/_scroll-now";
@@ -16,6 +17,7 @@
 @import "object/project/_flex-layout";
 @import "object/project/_main-visual";
 @import "object/project/_info";
+@import "object/project/_works";
 
 @import "object/utility/_mgb";
 @import "object/utility/_mgt";
