--- a/app/css/object/project/_flex-layout.scss
+++ b/app/css/object/project/_flex-layout.scss
@@ -10,3 +10,15 @@
     flex: 0 1 auto;
   }
 }
+
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  &__item {
+    width: calc((100% - 40px) / 2);
+  }
+  &__all {
+    width: calc(100% / 1);
+  }
+}
