--- a/app/css/object/project/_flex.scss
+++ b/app/css/object/project/_flex.scss
@@ -1,13 +1,20 @@
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .flex {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.flex-center {
-  display: flex;
-  align-items: center;
-}
+// .flex-center {
+//   display: flex;
+//   align-items: center;
+// }
 .flex-wrap {
   display: flex;
   flex-wrap: wrap;
