アコーディオンメニュー追加

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -7,10 +7,12 @@
 @import "layout/_footer";
 @import "layout/_sidemenu";
 @import "layout/_container";
+@import "layout/_main";
 
 @import "object/component/_button";
 @import "object/component/_scroll-now";
 @import "object/component/_scrollbar";
+@import "object/component/_mask";
 
 @import "object/project/_section";
 @import "object/project/_flex";
