--- a/app/css/layout/_header.scss
+++ b/app/css/layout/_header.scss
@@ -1,32 +1,48 @@
 .header {
+    position: fixed;
+    top: 0;
     display: flex;
     padding: 0 80px;
+    width: 100%;
     height: 160px;
+    z-index: 1;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
     .menu-icon {
+        position: relative;
+        width: 20px;
+        height: 12px;
         &__bar {
-            display: block;
-            width: 20px;
+            position: absolute;
+            left: 0;
+            width: 100%;
             height: 2px;
-            background: black;
-            margin: 5px 0;
+            background-color: $black;
+            border-radius: 2px;
+            transition: .4s;
+            &:nth-of-type(1) {
+                top: 0;
+            }
+            &:nth-of-type(2) {
+                top: 5px;
+            }
+            &:nth-of-type(3) {
+                bottom: 0;
+            }
+            &.active {
+                &:nth-of-type(1) {
+                    transform: translateY(5px) rotate(-25deg);
+                }
+                &:nth-of-type(2) {
+                    opacity: 0;
+                }
+                &:nth-of-type(3) {
+                    transform: translateY(-5px) rotate(25deg);
+                }
+            }
         }
-        // &.change {
-        //     &__bar {
-        //         &:nth-child(1) {
-        //             transform: rotate(-45deg) translate(-9px, 6px);
-        //         }
-        //         &:nth-child(2) {
-        //             opacity: 0;
-        //         }
-        //         &:nth-child(3) {
-        //             transform: rotate(45deg) translate(-8px, -8px);
-        //         }
-        //     }
-        // }
     }
 }
 
