--- a/app/css/fundation/_mixin.scss
+++ b/app/css/fundation/_mixin.scss
@@ -1,6 +1,6 @@
 // media query
 $breakpoints: (
-  'md': 'screen and (min-width: 768px)',
+  'md': 'screen and (max-width: 767px)',
 );
 
 @mixin mq($breakpoint: md) {
