--- a/app/css/object/project/_flex-layout.scss
+++ b/app/css/object/project/_flex-layout.scss
@@ -2,23 +2,43 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   &__side {
-    flex: 0 1 250px;
+    width: 280px;
   }
   &__main {
-    flex: 0 1 auto;
+    max-width: 710px;
+    flex: 1;
+  }
+  @include mq() {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
 .flex-wrap {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
   &__item {
     width: calc((100% - 40px) / 2);
   }
   &__all {
     width: calc(100% / 1);
+  }
+  &__textbar {
+    padding: 0 75px;
+  }
+  &__info {
+    display: block;
+    width: calc(100% - 200px);
+  }
+  @include mq() {
+    &__textbar {
+      padding: 0 30px;
+    }
+    &__info {
+      display: block;
+      width: calc(100% - 100px);
+    }
   }
 }
