--- a/app/css/layout/_header.scss
+++ b/app/css/layout/_header.scss
@@ -4,6 +4,7 @@
     display: flex;
     padding: 0 80px;
     width: 100%;
+    background: $white;
     height: 160px;
     z-index: 1;
     flex-direction: row;
