--- a/app/css/object/project/_flex.scss
+++ b/app/css/object/project/_flex.scss
@@ -3,6 +3,9 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  @include mq() {
+    flex-direction: column;
+  }
 }
 
 .flex {
