--- a/app/css/object/component/_scrollbar.scss
+++ b/app/css/object/component/_scrollbar.scss
@@ -44,8 +44,8 @@
 
 .pagetopbar {
     position: absolute;
-    right: -50px;
-    top: -150px;
+    // right: -50px;
+    // top: -150px;
 
     &__text {
         @include baseStyle($fontSize: 12px);
