index修正 font-family追加

--- a/app/css/fundation/_base.scss
+++ b/app/css/fundation/_base.scss
@@ -1,7 +1,8 @@
 body {
-  font-family: 'Noto Sans JP';
+  font-family: 'Poppins', sans-serif;
   height: auto;
   margin-top: 160px;
+  overflow-x: hidden;
 }
 
 img {
