--- a/app/css/object/component/_button.scss
+++ b/app/css/object/component/_button.scss
@@ -44,7 +44,7 @@ $backgroundColors: (
     content: '';
     position: absolute;
     display: inline-block;
-    background: url('../assets/images/scrollbar.svg') no-repeat;
+    background: url('../assets/images/scrollbar.gif') no-repeat;
     transform: rotate(-90deg);
     width: 10px;
     height: 70px;
