--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -1,3 +1,6 @@
+// fontfamily
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @import "fundation/_variable";
 @import "fundation/_reset";
 @import "fundation/_base";
