--- a/app/css/fundation/_variable.scss
+++ b/app/css/fundation/_variable.scss
@@ -1,5 +1,6 @@
 $black : #000000;
 $grey : #c2c2c2;
 $grey02 : #b5b5b5;
+$grey02-hover: rgba($grey02, .6);
 $hover-text : #d3d3d3;
 $white: #ffffff;
