--- a/app/css/object/component/_scroll-now.scss
+++ b/app/css/object/component/_scroll-now.scss
@@ -40,4 +40,14 @@
         height: 1px;
         background-color: $black;
     }
+    @include mq() {
+        %__item {
+            &::after {
+                width: 10px;
+            }
+        }
+        &__divider {
+            width: 25px;
+        }
+    }
 }
