--- a/app/css/fundation/_base.scss
+++ b/app/css/fundation/_base.scss
@@ -3,6 +3,11 @@ body {
   height: auto;
   margin-top: 160px;
   overflow-x: hidden;
+  cursor: none;
+  @include mq() {
+    margin-top: 80px;
+    // margin-top: 200px;
+  }
 }
 
 img {
@@ -12,4 +17,5 @@ img {
 
 a {
   text-decoration: none;
+  cursor: none;
 }
