--- a/app/css/object/project/_flex-layout.scss
+++ b/app/css/object/project/_flex-layout.scss
@@ -18,11 +18,17 @@
     align-items: flex-start;
   }
 }
-
-.flex-wrap {
+%flex-wrap {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: space-between;
+}
+
+.flex-wrap {
+  @extend %flex-wrap;
+  &--justify-between {
+    @extend %flex-wrap;
+    justify-content: space-between;
+  }
   &__item {
     width: calc(100% / 2);
     &:nth-child(odd) {
@@ -32,11 +38,16 @@
       padding-left: 20px;
     }
   }
+  &__item03 {
+    width: calc((100% - 100px) / 3);
+  }
   &__all {
     width: calc(100% / 1);
   }
   &__textbar {
     padding: 0 75px;
+    position: relative;
+    top: -75px;
   }
   &__info {
     display: block;
@@ -45,6 +56,7 @@
   @include mq() {
     &__textbar {
       padding: 0 30px;
+      top: -58px;
     }
     &__info {
       display: block;
