--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -17,16 +17,15 @@
 @import "object/component/_scrollbar";
 @import "object/component/_mask";
 @import "object/component/_cursor";
+@import "object/component/_fadein";
 
 @import "object/project/_section";
 @import "object/project/_flex";
 @import "object/project/_flex-layout";
 @import "object/project/_main-visual";
+@import "object/project/_top-visual";
 @import "object/project/_info";
 @import "object/project/_works";
 
-@import "object/utility/_mgb";
-@import "object/utility/_mgt";
-@import "object/utility/_pdt";
-@import "object/utility/_pdb";
+@import "object/utility/_color-bg";
 @import "object/utility/_dotted-line";
