--- a/app/css/fundation/_base.scss
+++ b/app/css/fundation/_base.scss
@@ -2,8 +2,10 @@ body {
   font-family: 'Poppins', sans-serif;
   height: auto;
   margin-top: 160px;
-  overflow-x: hidden;
   cursor: none;
+  &.is-mask {
+    overflow-y: hidden;
+  }
   @include mq() {
     margin-top: 80px;
     // margin-top: 200px;
