--- a/app/css/layout/_main.scss
+++ b/app/css/layout/_main.scss
@@ -1,14 +1,16 @@
 .main-fix {
-    display: block;
-    max-width: 730px;
-    margin: 0 auto;
-    height: 480px;
-    transition: .4s;
-    // overflow-y: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
     @include mq() {
-        padding: 0 35px;
+        // padding: 0 35px;
+        // top: 65%;
+        // width: 100%;
     }
 }
 .main {
-    overflow: hidden;
+    // overflow: hidden;
 }
