--- a/app/css/object/component/_mask.scss
+++ b/app/css/object/component/_mask.scss
@@ -1,10 +1,11 @@
 .mask {
     display: none;
-    position: absolute;
+    position: fixed;
     background: $white;
     width: 100%;
     height: 100%;
     z-index: 2;
+    overflow: hidden;
 }
 
 .accordion-list {
@@ -13,6 +14,10 @@
     display: block;
     margin-left: auto;
     margin-right: 140px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     &__link {
         display: block;
