--- a/app/css/object/component/_scrollbar.scss
+++ b/app/css/object/component/_scrollbar.scss
@@ -1,10 +1,11 @@
 .scrollbar {
     position: fixed;
     right: 17%;
-    bottom: 35%;
+    bottom: 130px;
 
     &__text {
         @include baseStyle($fontSize: 12px);
+        letter-spacing: .1em;
         writing-mode: vertical-rl;
         display: block;
         margin-bottom: 10px;
@@ -17,24 +18,20 @@
     }
     @include mq() {
         right: 5px;
-        bottom: 10%;
+        bottom: 155px;
     }
 }
 .textbar {
     &__text {
         @include baseStyle();
         writing-mode: vertical-rl;
-        display: block;
-        margin-bottom: 10px;
-        position: relative;
         &::before {
             content: '';
-            position: absolute;
-            width: 2px;
+            display: inline-block;
+            margin-bottom: 10px;
+            width: 1px;
             height: 60px;
             background: $black;
-            top: -80px;
-            left: 5px;
         }
     }
     @include mq() {
@@ -48,21 +45,25 @@
 }
 
 .pagetopbar {
-    position: absolute;
-    // right: -50px;
-    // top: -150px;
+    position: fixed;
+    bottom: 180px;
+    right: 5%;
 
     &__text {
         @include baseStyle($fontSize: 12px);
         writing-mode: vertical-rl;
-        display: block;
+        letter-spacing: .1em;
         &::before {
             content: '';
             display: inline-block;
+            vertical-align: middle;
             background: url('../assets/images/black-arrow.gif') no-repeat;
             width: 5px;
             height: 52px;
             margin-bottom: 10px;
         }
+    }
+    @include mq() {
+        right: 2%;
     }
 }
