--- a/app/css/object/component/_mask.scss
+++ b/app/css/object/component/_mask.scss
@@ -22,9 +22,9 @@
     &__link {
         display: block;
         padding: 40px 0;
-        &:not(:last-child) {
-            border-bottom: 1px solid #000;
-        }
+        // &:not(:last-child) {
+        //     border-bottom: 1px solid #000;
+        // }
         &:hover {
             span {
                 color: $hover-text;
