--- a/app/css/object/component/_cursor.scss
+++ b/app/css/object/component/_cursor.scss
@@ -4,13 +4,13 @@
     top: 0;
     left: 0; 
     cursor: none;
-    //他の要素がクリックできなくならないように
     pointer-events: none;
     width: 40px;
     height: 40px;
     border: 1px solid $black;
-    //どの要素よりも一番上になるようにする
+    transition: .15s;
     z-index: 1000;
+    opacity: 0;
     &.is-active {
         background: $grey02-hover;
         border: 1px solid $grey02-hover;
