--- a/app/css/object/utility/_dotted-line.scss
+++ b/app/css/object/utility/_dotted-line.scss
@@ -10,6 +10,13 @@
     background-repeat: repeat-x;
 }
 
+.border {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: $black;
+}
+
 .separate {
     width: 1px;
     height: 60px;
