--- a/app/css/object/component/_fadein.scss
+++ b/app/css/object/component/_fadein.scss
@@ -26,58 +26,42 @@
     }
 }
 
-%fadeinLeft {
-    opacity: 0;
-    transform : translate(-100%, 0);
-}
-
 .fadein-left {
-    @extend %fadeinLeft;
-    transition:1.5s;
-    // &.s3 {
-    //     transition:.3s, .6s;
-    // }
-    // &.s45 {
-    //     transition:.3s, .9s;
-    // }
-    // &.scrollin {
-    //     opacity: 1;
-    //     transform: translateX(0);
-    // }
+    transition:.5s .5s;
+    &.on {
+        transform: scaleX(1);
+        transform-origin: right;
+    }
+    &.off {
+        transform-origin: left;
+        transform: scaleX(0);
+    }
 }
 
-%fadeinUnder {
-    opacity: 0;
-    transform : translate(0, 50px);
-}
+// %fadeinUnder {
+//     opacity: 0;
+//     transform : translate(0, 50px);
+// }
 
 .fadein-under {
-    @extend %fadeinUnder;
-    transition: 1.5s;
-    // &.s3 {
-    //     transition:.3s, .6s;
-    // }
-    // &.s45 {
-    //     transition:.3s, .9s;
-    // }
-    // &.scrollin {
-    //     opacity: 1;
-    //     transform: translateY(0);
-    // }
-    // &.scrollout {
-    //     opacity: 0;
-    //     transform: translateY(-50);
-    // }
+    transition:.5s, 1s;
+    transform: translateY(1000%);
+    &.on {
+        transform: translateY(0);
+    }
+    &.off {
+        transform: translateY(-1000%);
+    }
+    &.s3 {
+        transition:.5s, 2s;
+    }
+    &.s45 {
+        transition:.5s, 3s;
+    }
+    &.s6 {
+        transition:.5s, 6s;
+    }
+    &.s75 {
+        transition:.5s, 8s;
+    }
 }
-
-
-// @keyframes SlideInUnder {
-//   0% {
-//     opacity: 0;/*初期状態では透明に*/
-//     transform: translateY(100%);
-//   }
-//   100% {
-//     opacity: 1;
-//     transform: translateY(0);
-//   }
-// }
