修正箇所訂正 05/16

--- a/app/css/layout/_header.scss
+++ b/app/css/layout/_header.scss
@@ -11,6 +11,11 @@
     justify-content: space-between;
     align-items: center;
 
+    &__h1 {
+        @include baseStyle($fontWeight: bold);
+        letter-spacing: .1em;
+    }
+
     .menu-icon {
         position: relative;
         width: 20px;
