--- a/app/css/layout/_main.scss
+++ b/app/css/layout/_main.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     transition: 1s;
+    // z-index: 2;
     @include mq() {
         // padding: 0 35px;
         // top: 65%;
