--- a/app/css/object/component/_cursor.scss
+++ b/app/css/object/component/_cursor.scss
@@ -9,6 +9,7 @@
     height: 40px;
     border: 1px solid $black;
     transition: .15s;
+    transition-timing-function: ease-out;
     z-index: 1000;
     opacity: 0;
     &.is-active {
