--- a/app/css/object/project/_info.scss
+++ b/app/css/object/project/_info.scss
@@ -1,28 +1,31 @@
 .info {
     &__title {
-        @include baseStyle($fontSize: 16px);
+        @include baseStyle($fontSize: 16px, $fontWeight: 400);
+        font-family: noto-sans-cjk-jp;
     }
     &__title02 {
-        @include baseStyle($fontSize: 18px);
+        @include baseStyle($fontSize: 18px, $fontWeight: 700);
+        font-family: noto-sans-cjk-jp;
         display: block;
         margin-bottom: 50px;
     }
     &__sub {
-        @include baseStyle($color: $grey, $fontSize: 10px);
+        @include baseStyle($color: $grey, $fontSize: 10px, $fontWeight: 400);
     }
     &__sub02 {
-        @include baseStyle($color: $grey02, $fontSize: 12px);
+        @include baseStyle($color: $grey02, $fontSize: 12px, $fontWeight: 400);
         display: inline-block;
         margin-bottom: 5px;
     }
     &__text {
-        @include baseStyle($color: $black, $fontSize: 10px, $lineHeight: 2);
+        @include baseStyle($color: $black, $fontSize: 10px, $fontWeight: 400, $lineHeight: 2);
+        font-family: noto-sans-cjk-jp;
         margin-bottom: 95px;
     }
     &__desc {
-        @include baseStyle($color: $black, $fontSize: 14px);
+        @include baseStyle($color: $black, $fontSize: 14px, $fontWeight: 600);
         &--grey {
-            @include baseStyle($color: $grey02, $fontSize: 14px);
+            @include baseStyle($color: $grey02, $fontSize: 14px, $fontWeight: 600);
         }
     }
     &__btn {
