--- a/app/css/object/project/_top-visual.scss
+++ b/app/css/object/project/_top-visual.scss
@@ -11,14 +11,14 @@
 
     &__img {
         // display: block;
-        width: 60%;
+        width: 57%;
         // margin: 0 auto 25px;
         // position: relative;
         // top: 20%;
     }
     &__link {
         display: block;
-        width: 60%;
+        width: 57%;
         margin: 0 auto;
         text-align: right;
         position: relative;
@@ -26,10 +26,10 @@
     }
     .visual-link {
         &__text {
-            @include baseStyle($color: $black, $fontSize: 10px);
+            @include baseStyle($color: $black, $fontSize: 10px, $fontWeight: 700);
             letter-spacing: .1em;
             &--grey {
-                @include baseStyle($color: $grey02, $fontSize: 10px);
+                @include baseStyle($color: $grey02, $fontSize: 10px, $fontWeight: 700);
                 letter-spacing: .1em;
             }
         }
@@ -44,7 +44,7 @@
         &__img {
             width: 100%;
             padding: 0 35px;
-            margin-top: 160px;
+            margin-top: 120px;
         }
         &__link {
             width: 100%;
