--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -1,5 +1,6 @@
 // fontfamily
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;1,500;1,600&display=swap');
 
 @import "fundation/_variable";
 @import "fundation/_reset";
