--- a/app/css/object/component/_scrollbar.scss
+++ b/app/css/object/component/_scrollbar.scss
@@ -1,7 +1,7 @@
 .scrollbar {
     position: fixed;
     right: 18%;
-    bottom: 20%;
+    z-index: 1;
 
     &__text {
         @include baseStyle($fontSize: 12px, $fontWeight: 500);
@@ -18,7 +18,6 @@
     }
     @include mq() {
         right: 10px;
-        bottom: 18%;
         &__text {
             font-size: 9px;
         }
